compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__multiple_bad_statement_assignment_with_annotation_fault_tolerance.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n  let a: Int = \"not an int\"\n  let b: String = 1\n  let c = a + 2\n}\n"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:3:16
  │
3 │   let a: Int = "not an int"
  │                ^^^^^^^^^^^^

Expected type:

    Int

Found type:

    String

error: Type mismatch
  ┌─ /src/one/two.gleam:4:19
  │
4 │   let b: String = 1
  │                   ^

Expected type:

    String

Found type:

    Int

error: Type mismatch
  ┌─ /src/one/two.gleam:5:11
  │
5 │   let c = a + 2
  │           ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    String

Hint: Strings can be joined using the `append` or `concat` functions from the
`gleam/string` module.
